<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.BankDetailsFragment">
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/expressway_rg"
        android:src="@drawable/ic_launcher_foreground"
        android:text="@string/bank_details"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/gray_color"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="true"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent"
       >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/expressway_rg"
                android:text="@string/enter_your_bank_account_details_to_get_money"/>

            <EditText
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                android:id="@+id/edtAccountHolderName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/expressway_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/account_holder_name"
                android:maxLines="1"
                android:maxLength="55"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:layout_marginTop="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt"/>
            <EditText
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                android:id="@+id/edtAccountNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/expressway_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/account_number"
                android:maxLines="1"
                android:maxLength="18"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/edtAccountHolderName"/>
            <EditText
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                android:id="@+id/edtIban"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/expressway_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/iban_number"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="23"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/edtAccountNumber"/>

            <TextView
                android:id="@+id/btnSave"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                app:layout_constraintTop_toBottomOf="@+id/edtIban"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/gold_filled_rect_box"
                android:fontFamily="@font/farsi_simple_bold"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/save_text"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>