<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.BankDetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/expressway_rg"
            android:gravity="center_vertical|start"
            android:textAlignment="viewStart"
            android:paddingHorizontal="10dp"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_4sdp"
            android:src="@drawable/ic_launcher_foreground"
            android:text="@string/bank_details"
            android:textAllCaps="true"
            android:textColor="@color/gold"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backImg" />
        <ImageView
            android:id="@+id/backImg"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/back"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/expressway_rg"
                android:text="@string/enter_your_bank_account_details_to_get_money"/>

            <EditText
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                android:id="@+id/edtAccountHolderName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/expressway_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/account_holder_name"
                android:maxLines="1"
                android:maxLength="55"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:layout_marginTop="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt"/>
            <EditText
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                android:id="@+id/edtAccountNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/expressway_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/account_number"
                android:maxLines="1"
                android:maxLength="18"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/edtAccountHolderName"/>
            <EditText
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                android:id="@+id/edtIban"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/expressway_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/iban_number"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="23"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/edtAccountNumber"/>

            <TextView
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                app:layout_constraintTop_toBottomOf="@+id/edtIban"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/gold_filled_rect_box"
                android:fontFamily="@font/expressway_rg"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_18ssp"
                android:textAllCaps="false"
                android:text="@string/save"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>